Unify animations for diagrams

--- a/layouts/shortcodes/DualBootDiagram.html
+++ b/layouts/shortcodes/DualBootDiagram.html
@@ -1,1 +1,11 @@
-<div data-react-component="DualBootDiagram"></div>
+<div class="dualboot-diagram-wrapper">
+  <div
+    id="dualboot-diagram"
+    class="react-diagram"
+    data-diagram="dualboot"
+  ></div>
+  <p class="diagram-caption">
+    Arch / Windows / systemd-boot / UEFI の関係図
+  </p>
+</div>
+
